# Xbox-GDK-Samples

./: .gitignore  LICENSE  NOTICE.md  README.md  gdk-samples-list.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/scripts/: eval-pr-summary.js
.github/workflows/: pr-summary-eval-reusable.yml  pr-summary-eval.yml  pr-summary-generate.yml
Kits/AMDTK/GLTF/: GLTFResources.cpp  GLTFResources.h  GltfDepthPass.cpp  GltfDepthPass.h  GltfFile.cpp  GltfFile.h  GltfHelpers.h  GltfMotionVectorsPass.cpp  GltfMotionVectorsPass.h  GltfPbrMaterial.cpp  GltfPbrMaterial.h  GltfPbrPass.cpp  GltfPbrPass.h  GltfRTShadowPass.cpp  GltfRTShadowPass.h  GltfStructures.h  ShaderCompiler.cpp  ShaderCompiler.h  glTFHelpers.cpp
Kits/AMDTK/json/: json.h
Kits/ATGTK/: CSVReader.h  CommandLine.h  CompressedTextureFactory.h  ControllerFont.h  ControllerHelp.cpp  DXRHelper.h  DeveloperMode.h  FileDownloader.cpp  FileDownloader.h  FileLogger.cpp  FileLogger.h  FindMedia.h  FlyCamera.cpp  FlyCamera.h  FreeCamera.cpp  FreeCamera.h  GuidUtil.h  HttpManager.cpp  HttpManager.h  Json.h  MSAAHelper.cpp  MSAAHelper.h  Meshlet.cpp  Meshlet.h  OSLockable.h  OrbitCamera.cpp  PerformanceTimers.cpp  PerformanceTimers.h  PerformanceTimersXbox.cpp  PerformanceTimersXbox.h  Processor.cpp  Processor.h  RDTSCPStopWatch.h  RDTSCPStopwatch.cpp  Random.h  ReadCompressedData.cpp  ReadCompressedData.h  ReadData.h  RenderTexture.cpp  RenderTexture.h  (+11 more)
Kits/ATGTK/FrontPanel/: BufferDescriptor.h  CPUShapes.h  FrontPanelDisplay.cpp  FrontPanelDisplay.h  FrontPanelInput.cpp  FrontPanelInput.h  FrontPanelRenderTarget.cpp  FrontPanelRenderTarget.h  RasterFont.cpp  RasterFont.h
Kits/ATGTK/FullScreenQuad/: FullScreenQuad.cpp  FullScreenQuad.h  FullScreenQuad.hlsli
Kits/ATGTK/HDR/: HDRCommon.hlsli  HDRImage.cpp  HDRImage.h
Kits/ATGTK/Skybox/: Skybox.h  SkyboxEffect.cpp  SkyboxEffect.h  SkyboxEffect_Common.hlsli  SkyboxEffect_PS.hlsl  SkyboxEffect_VS.hlsl
Kits/ATGTK/UnicodeRendering/: GlyphCache.cpp  GlyphCache.h
Kits/ATGTK/json/: commit_id.txt  json.hpp
Kits/ATGTelemetry/GDK/: ATGTelemetry.cpp  ATGTelemetry.h
Kits/DirectXTK12/: DirectXTK12_GDKX_2022.vcxproj  DirectXTK12_GDK_2017.vcxproj  DirectXTK12_GDK_2019.vcxproj  DirectXTK12_GDK_2022.vcxproj  DirectXTK12_GRDK_2017.vcxproj  DirectXTK12_GRDK_2017.vcxproj.filters  DirectXTK12_GRDK_2019.vcxproj  DirectXTK12_GRDK_2019.vcxproj.filters  DirectXTK12_GXDK_2017.vcxproj  DirectXTK12_GXDK_2019.vcxproj  DirectXTK12_GXDK_2019.vcxproj.filters  DirectXTK12_GXDK_2022.vcxproj  DirectXTK_Desktop_2019_Win10.vcxproj  DirectXTK_Desktop_2022_Win10.vcxproj  README.md
Kits/DirectXTK12/Inc/: GamePad.h
Kits/DirectXTK12/Src/: GamePad.cpp  Keyboard.cpp  Mouse.cpp
Kits/DirectXTex/: DirectXTex_GXDK_2019.vcxproj  DirectXTex_GXDK_2019.vcxproj.filters  DirectXTex_GXDK_2022.vcxproj  DirectXTex_GXDK_PC_2017.vcxproj  DirectXTex_GXDK_PC_2017.vcxproj.filters  DirectXTex_GXDK_PC_2019.vcxproj  DirectXTex_GXDK_PC_2022.vcxproj
Kits/LiveTK/: LiveInfoHUD.cpp  LiveInfoHUD.h  LiveResources.cpp  LiveResources.h
Kits/OpenSource/imgui/: imconfig.h  imgui.cpp  imgui_impl_dx12.cpp  imgui_impl_win32.cpp
Kits/PlayFabGDK/: PlayFabResources.cpp  PlayFabResources.h
Kits/UITK/: UIButton.cpp  UIButton.h  UICheckBox.cpp  UICheckBox.h  UIConsoleWindow.cpp  UIConsoleWindow.h  UICore.cpp  UICore.h  UIDebugConfig.h  UIDebugPanel.cpp  UIDebugPanel.h  UIElement.cpp  UIElement.h  UIEvent.h  UIFontRenderer.h  UIFreeTypeFontRendererD3D.cpp  UIFreeTypeFontRendererD3D.h  UIImage.cpp  UIImage.h  UIInputState.cpp  UIInputState.h  UIJsonImpl.cpp  UIKeywords.h  UILog.cpp  UILog.h  UIManager.cpp  UIManager.h  UIMath.cpp  UIMath.h  UIPanel.cpp  UIPanel.h  UIPipStrip.cpp  UIPipStrip.h  UIProgressBar.cpp  UIProgressBar.h  UISerializer.cpp  UISerializer.h  UISliderElement.cpp  UISliderElement.h  UISpriteFontRendererD3D.cpp  (+24 more)
Media/Fonts/: SegoeUI_30_Italic.spritefont  SegoeUI_48_Bold.spritefont  SegoeUI_48_Italic.spritefont
Media/HDR/: Readme.txt
Media/Meshes/AMDCorridor/: Corridor.gltf
Media/Meshes/ATGDragon/: dragon_LOD1.sdkmesh  dragon_LOD2.sdkmesh  dragon_LOD3.sdkmesh  dragon_LOD4.sdkmesh  dragon_LOD5.sdkmesh
Media/Meshes/AbstractCathedral/: CelingCubesLightingMap.dds  CenterCubes.dds  CenterCubesLightingMap.dds  CenterLightingMap.dds  CenterPool.dds  FloorLightingMap .dds  (+12 more)
Media/Textures/: 1920x1080.DDS  1920x1080_basic.DDS  2560x1440.DDS  DeferredParticle.dds  RedCircle.DDS  iris.dds  particle.dds
Samples/: NuGet.config
Samples/Tools/CMakeExample/Desktop/: CMakeGDKDesktop.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  MicrosoftGame.Config
Samples/Tools/CMakeExample/Scarlett/: CMakeGDKScarlett.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  MicrosoftGame.Config
Samples/Tools/CMakeExample/XboxOne/: CMakeGDKXboxOne.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  MicrosoftGame.Config
Samples/Tools/CMakeGDKExample/: BasicChecksWorkaround.props  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DeviceResources.cpp  DeviceResources.h  Game.cpp  Game.h  Main.cpp  MicrosoftGame.Config  MicrosoftGameConfig.mgc  Readme.docx  Readme.md  Readme_ja-JP.docx  Readme_ko-KR.docx  Readme_zh-CN.docx  VertexShader.hlsl  gdk_build.props  grdk_toolchain.cmake  gxdk_toolchain.cmake  gxdk_xs_toolchain.cmake  pch.h  readme_en-us.md  readme_ja-jp.md  readme_ko-kr.md  readme_zh-cn.md
Samples/Tools/CMakeXboxConsoleApp/: CMakeGDKXbox.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Main.cpp  Readme.docx  Readme.md  Readme_ja-JP.docx  Readme_ko-KR.docx  Readme_zh-CN.docx  readme_en-us.md  readme_ja-jp.md  readme_ko-kr.md  readme_zh-cn.md
Samples/Tools/xbcompress/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Readme.docx  Readme.md  Readme_ja-JP.docx  Readme_ko-KR.docx  Readme_zh-CN.docx  compresstool.cpp  readme_en-us.md  readme_ja-jp.md  readme_ko-kr.md  readme_zh-cn.md
Samples/Tools/xbdepends/: CMakeLists.txt  CMakePresets.json  GameOSAPIs.h  KnownDLLs.h  Readme.md  readme_en-us.md  readme_ja-jp.md  readme_ko-kr.md  readme_zh-cn.md  xbdepends.cpp
(+3980 files in other folders)
